# storagebox

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  compose.yaml  pyproject.toml  pytest.ini
config/: loki-config.yaml
monitoring-configs/: prometheus.yaml  promtail-config.yaml
src/: main.py
src/auth/: controllers.py  models.py  services.py
src/configs/: configs.py  db.py
src/security/: auth.py
src/store/: controllers.py  models.py  services.py
tests/: conftest.py  test_main.py
