[project]
name = "storagebox"
version = "0.1.0"
description = "Store your personal files and access from anywhere with a simple otp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "ruff>=0.12.10",
    "sqlmodel>=0.0.24",
]
