[project]
name = "storagebox"
version = "1.0.0"
description = "Store files and access from anywhere with a otp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.2",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "locust>=2.39.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
]
